[package]
name = "fallmole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.0"
bevy_rapier2d = "0.27"
bevy_prototype_lyon = "0.12"

[dev-dependencies]
bevy = "0.14.0"
bevy_rapier2d = { version = "0.27", features = ["debug-render-2d"]}
bevy_prototype_lyon = "0.12"

# [profile.release]
# opt-level = 'z'
# lto = "thin"

